--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - '8080:80'
+    #ports:
+    #  - '9090:80' not needed as services are on proxiable network exposing original ports
     environment:
       - NODE_ENV=production
     restart: unless-stopped
+    networks:
+      - proxiable
+networks:
+  proxiable:
+    external: true
+    name: proxiable
