--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,24 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:80"
+    env_file:
+      - ./ui/.env.docker
     restart: unless-stopped
+    depends_on:
+      - backend
+    networks:
+      - parchmark-net
 
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
     env_file:
       - ./backend/.env.docker
     restart: unless-stopped
+    networks:
+      - parchmark-net
+
+networks:
+  parchmark-net:
+    driver: bridge
