--- a/ui/package.json
+++ b/ui/package.json
@@ -23,10 +23,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "framer-motion": "^10.16.16",
     "immer": "^10.1.1",
+    "mermaid": "^11.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^7.5.1",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "zustand": "^5.0.3"
   },
