--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,5 +11,10 @@ python-dotenv==1.0.0
 black==23.12.1
 flake8==7.0.0
 pytest==7.4.4
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+pytest-asyncio==0.23.2
+pytest-xdist==3.5.0
+httpx==0.26.0
 mypy==1.8.0
 
