feat(backend): Optimize test execution with pytest-xdist and modernize tooling
- Enable parallel test execution with pytest-xdist (4x performance improvement)
  - Configure with -n auto and --dist worksteal for optimal CPU utilization
  - Tests now run in ~9.5s instead of ~38s

- Migrate from pip to uv for faster dependency management
  - Move dependencies from requirements.txt to pyproject.toml
  - Archive requirements.txt for reference

- Replace flake8/black with ruff for unified linting and formatting
  - Add comprehensive ruff configuration in pyproject.toml
  - Configure pre-commit hooks for code quality enforcement

- Add backend testing to GitHub Actions CI/CD pipeline
  - Test against Python 3.11, 3.12, and 3.13
  - Use astral-sh/setup-uv@v6 for efficient CI setup
  - Enforce same quality standards as local pre-commit hooks

- Improve developer experience
  - Add Makefile with common commands (test, lint, format, etc.)
  - Update README with comprehensive testing documentation
  - Configure pre-commit hooks for automatic code quality checks

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -19,6 +19,8 @@ addopts =
     --cov-report=term-missing
     --cov-fail-under=90
     --tb=short
+    -n auto
+    --dist worksteal
 
 # Markers for test categorization
 markers =
