--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,9 @@ on:
     branches: [ main, develop ]
 
 jobs:
-  test:
+  ui-tests:
     runs-on: ubuntu-latest
+    name: UI Tests
 
     steps:
     - name: Checkout code
@@ -35,3 +36,51 @@ jobs:
       run: |
         cd ui
         npm test
+
+  backend-tests:
+    runs-on: ubuntu-latest
+    name: Backend Tests
+    strategy:
+      matrix:
+        python-version: ['3.11', '3.12', '3.13']
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Install uv
+      uses: astral-sh/setup-uv@v6
+      with:
+        enable-cache: true
+        cache-dependency-glob: "backend/pyproject.toml"
+
+    - name: Setup Python with uv
+      run: |
+        cd backend
+        uv python install ${{ matrix.python-version }}
+        uv python pin ${{ matrix.python-version }}
+
+    - name: Sync dependencies with uv
+      run: |
+        cd backend
+        uv sync --dev
+
+    - name: Run ruff linting
+      run: |
+        cd backend
+        uv run ruff check app tests
+
+    - name: Run ruff formatting check
+      run: |
+        cd backend
+        uv run ruff format --check app tests
+
+    - name: Run type checking
+      run: |
+        cd backend
+        uv run mypy app --ignore-missing-imports
+
+    - name: Run tests with coverage (parallel with xdist)
+      run: |
+        cd backend
+        uv run pytest -v --cov=app --cov-report=xml --cov-report=term
