--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,8 +16,8 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "black==23.12.1",
-    "flake8==7.0.0",
+    "ruff==0.8.5",
+    "pre-commit==4.1.0",
     "pytest==7.4.4",
     "pytest-cov==4.1.0",
     "pytest-mock==3.12.0",
@@ -52,6 +52,8 @@ addopts = [
     "--cov-report=term-missing",
     "--cov-fail-under=90",
     "--tb=short",
+    "-n", "auto",
+    "--dist", "worksteal",
 ]
 markers = [
     "unit: Unit tests for individual functions and classes",
@@ -87,12 +89,42 @@ skip_covered = false
 [tool.coverage.html]
 directory = "coverage_html"
 
+[tool.ruff]
+target-version = "py311"
+line-length = 120
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "UP", # pyupgrade
+]
+ignore = [
+    "E501", # line too long (handled by formatter)
+    "B008", # do not perform function calls in argument defaults
+]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+
+[tool.mypy]
+python_version = "3.11"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = false
+ignore_missing_imports = true
+
 [dependency-groups]
 dev = [
-    "black>=23.12.1",
+    "ruff>=0.8.5",
+    "pre-commit>=4.1.0",
     "factory-boy>=3.3.0",
     "faker>=20.1.0",
-    "flake8>=7.0.0",
     "freezegun>=1.5.5",
     "httpx>=0.26.0",
     "mypy>=1.8.0",
