chore(backend): Temporarily disable ruff linting and formatting
- Comment out ruff checks in GitHub Actions workflow
- Comment out ruff hooks in pre-commit configuration
- Keep configuration in place for future re-enablement
- MyPy type checking and other pre-commit hooks remain active

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,15 +65,15 @@ jobs:
           cd backend
           uv sync --dev
 
-      - name: Run ruff linting
-        run: |
-          cd backend
-          uv run ruff check app tests
+      # - name: Run ruff linting
+      #   run: |
+      #     cd backend
+      #     uv run ruff check app tests
 
-      - name: Run ruff formatting check
-        run: |
-          cd backend
-          uv run ruff format --check app tests
+      # - name: Run ruff formatting check
+      #   run: |
+      #     cd backend
+      #     uv run ruff format --check app tests
 
       - name: Run type checking
         run: |
