--- a/backend/.pre-commit-config.yaml
+++ b/backend/.pre-commit-config.yaml
@@ -1,10 +1,11 @@
 repos:
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.8.5
-    hooks:
-      - id: ruff
-        args: [--fix]
-      - id: ruff-format
+  # Ruff linting and formatting - disabled for now
+  # - repo: https://github.com/astral-sh/ruff-pre-commit
+  #   rev: v0.8.5
+  #   hooks:
+  #     - id: ruff
+  #       args: [--fix]
+  #     - id: ruff-format
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.8.0
