chore(backend): Temporarily disable mypy type checking
- Comment out mypy check in GitHub Actions workflow
- Comment out mypy hook in pre-commit configuration
- Keep configuration in place for future re-enablement
- Only basic pre-commit hooks (trailing whitespace, file checks) remain active

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,10 +75,10 @@ jobs:
       #     cd backend
       #     uv run ruff format --check app tests
 
-      - name: Run type checking
-        run: |
-          cd backend
-          uv run mypy app --ignore-missing-imports
+      # - name: Run type checking
+      #   run: |
+      #     cd backend
+      #     uv run mypy app --ignore-missing-imports
 
       - name: Run tests with coverage (parallel with xdist)
         run: |
