fix(backend): Apply ruff linting and formatting fixes
- Fix import sorting across all files (I001)
- Remove trailing whitespace (W291, W293)
- Add missing newlines at end of files (W292)
- Remove unused imports (F401)
- Update type annotations to use modern syntax (UP006, UP007)
- Use datetime.UTC instead of deprecated utcnow (UP017)
- Fix raise from exception handling (B904)
- Convert generator to set comprehension (C401)
- Refactor unused loop variable to list comprehension
- Apply consistent code formatting with ruff format
- Configure ruff in pyproject.toml with proper lint section
- Suppress B017 for pytest.raises(Exception) in tests

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -92,6 +92,8 @@ directory = "coverage_html"
 [tool.ruff]
 target-version = "py311"
 line-length = 120
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
@@ -104,6 +106,7 @@ select = [
 ignore = [
     "E501", # line too long (handled by formatter)
     "B008", # do not perform function calls in argument defaults
+    "B017", # pytest.raises(Exception) - acceptable in tests
 ]
 
 [tool.ruff.format]
