feat(backend): Enable ruff in pre-commit hooks and GitHub Actions
- Configure pre-commit hooks with ruff (check-only mode)
  - Ruff linting with --no-fix flag
  - Ruff formatting with --check flag
  - Standard pre-commit hooks for file hygiene
  - Exclude tsconfig files from JSON validation (they allow comments)

- Enable ruff checks in GitHub Actions workflow
  - Add ruff linting check step with --no-fix
  - Add ruff formatting check step with --check
  - Both CI and pre-commit now enforce same standards

- Fix remaining import and formatting issues
  - Update import ordering in main.py, run.py, and manage_users.py
  - Remove trailing whitespace from various files
  - Add missing newlines at end of files

All checks now pass:
- Pre-commit: All 11 hooks passing
- GitHub Actions: Ready for CI/CD
- Tests: All 418 tests passing with 90%+ coverage

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,15 +65,15 @@ jobs:
           cd backend
           uv sync --dev
 
-      # - name: Run ruff linting
-      #   run: |
-      #     cd backend
-      #     uv run ruff check app tests
+      - name: Run ruff linting check
+        run: |
+          cd backend
+          uv run ruff check app tests --no-fix  # Check only, no auto-fix
 
-      # - name: Run ruff formatting check
-      #   run: |
-      #     cd backend
-      #     uv run ruff format --check app tests
+      - name: Run ruff formatting check
+        run: |
+          cd backend
+          uv run ruff format --check app tests  # Check only, no auto-format
 
       # - name: Run type checking
       #   run: |
