feat(backend): Build app as wheel for cleaner Docker deployment
- Build application as a wheel package using 'uv build'
- Install app from wheel instead of copying source code
- Only runtime configs (.env.docker) needed in final image
- Cleaner separation between build artifacts and runtime
- More secure - no source code in production container

Date: 2025-01-23

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,23 +3,28 @@ FROM ghcr.io/astral-sh/uv:python3.13-trixie as builder
 
 WORKDIR /app
 
-# Copy dependency files
+# Copy all application files needed to build the wheel
 COPY pyproject.toml ./
+COPY app ./app
+COPY main.py ./
 
-# Install dependencies and the project using uv
-# This creates a virtual environment with all dependencies
-RUN uv sync --frozen --no-dev
+# Build the application wheel (includes the app code itself)
+RUN uv build --wheel --out-dir /wheels
+
+# Install the wheel with all dependencies
+# uv sync automatically creates .venv if it doesn't exist
+RUN uv sync --frozen --no-dev --find-links /wheels
 
 # Stage 2: Final stage using matching Python version
 FROM python:3.13-slim-trixie
 
 WORKDIR /app
 
-# Copy the virtual environment from builder
+# Copy the complete virtual environment with app and all dependencies
 COPY --from=builder /app/.venv /app/.venv
 
-# Copy the application code
-COPY . .
+# Copy only runtime configuration files if needed
+COPY .env.docker ./.env
 
 # Activate the virtual environment by adding it to PATH
 ENV PATH="/app/.venv/bin:$PATH"
@@ -29,4 +34,5 @@ ENV VIRTUAL_ENV="/app/.venv"
 EXPOSE 8000
 
 # Command to run the application
+# The app is installed in the venv, no source code needed
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
