fix(production): Configure API URL and CORS for production deployment
- Add VITE_API_URL environment variable for production API endpoint
- Update UI to use environment variable for API URL (falls back to /api proxy)
- Make CORS origins configurable via ALLOWED_ORIGINS environment variable
- Backend already has correct CORS domains in .env.production
- Frontend now points to https://assets-api.engen.tech in production

Date: 2025-01-23

--- a/ui/.env.production
+++ b/ui/.env.production
@@ -1,4 +1,7 @@
 # ParchMark Frontend Production Configuration
 
+# API URL for production
+VITE_API_URL=https://assets-api.engen.tech
+
 # Set to "false" since Nginx Proxy Manager handles SSL
 USE_HTTPS=false
