refactor: Make backend runnable as Python module for wheel packaging
- Move main.py to app/main.py to include in package
- Add app/__main__.py as module entry point with startup messages
- Remove redundant run.py script
- Update Dockerfile to use 'python -m app' instead of uvicorn directly
- Update documentation and Makefile to reflect new execution method

This change follows Python packaging best practices, making the app
properly executable when installed as a wheel in Docker containers.
The module can now be run with 'python -m app' both locally and in
production, eliminating the "Could not import module 'main'" error.

Benefits:
- Idiomatic Python module structure
- Works correctly when installed as wheel
- Maintains all startup messages and debug output
- Simplifies codebase by removing redundant entry point

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,7 +9,6 @@ COPY uv.lock ./
 
 # Copy application files needed to build the wheel
 COPY app ./app
-COPY main.py ./
 
 # Build the application wheel (includes the app code itself)
 RUN uv build --wheel --out-dir /wheels
@@ -35,6 +34,6 @@ ENV VIRTUAL_ENV="/app/.venv"
 # Expose the port the app runs on
 EXPOSE 8000
 
-# Command to run the application
-# The app is installed in the venv, no source code needed
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Command to run the application as a Python module
+# The app is installed in the venv and can be run as a module
+CMD ["python", "-m", "app"]
