--- a/ui/.env.production
+++ b/ui/.env.production
@@ -1,7 +1,7 @@
 # ParchMark Frontend Production Configuration
 
 # API URL for production
-VITE_API_URL=https://assets-api.engen.tech
+VITE_API_URL=https://assets-api.engen.tech/api
 
 # Set to "false" since Nginx Proxy Manager handles SSL
 USE_HTTPS=false
