--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,7 +16,7 @@ services:
       retries: 3
       start_period: 60s
     networks:
-      - parchmark-internal
+      - proxiable
 
   backend:
     build:
@@ -31,7 +31,6 @@ services:
         condition: service_healthy
     networks:
       - proxiable
-      - parchmark-internal
     labels:
       # Nginx Proxy Manager labels for API
       - "npm.enable=true"
@@ -65,7 +64,6 @@ services:
       - backend
     networks:
       - proxiable
-      - parchmark-internal
     labels:
       # Nginx Proxy Manager labels for automatic configuration
       - "npm.enable=true"
