--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,10 @@ jobs:
 
       - name: Run tests
         run: make test-ui-test
+
+      - name: Run coverage
+        run: npx vitest run --coverage
+
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
