--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
         run: make test-ui-test
 
       - name: Run coverage
-        run: npx vitest run --coverage
+        run: cd ui && npx vitest run --coverage
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
