perf: optimize deployment timing and standardize health checks
Reduces deployment time and improves consistency between health check
implementations across the stack.

Changes:

1. Workflow Sleep Optimization (.github/workflows/deploy.yml):
   - Reduced sleep from 10s to 5s (line 163)
   - Health checks already handle startup timing:
     * Backend: start_period: 30s
     * Frontend: start_period: 20s + depends on backend
   - 5s provides brief stabilization while relying on robust retries

2. Backend Dockerfile Health Check (backend/Dockerfile.prod):
   - Added curl to apt-get install (more standard for containers)
   - Changed HEALTHCHECK from Python urllib to curl
   - Matches docker-compose.yml approach for consistency
   - Simpler syntax: curl -f http://localhost:8000/api/health
   - Uses /api/health endpoint (comprehensive DB check)

Benefits:
- 50% faster deployment stabilization (10s → 5s)
- Consistent health check approach across all services
- Simpler, more maintainable health check commands
- Better alignment with container best practices

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -158,9 +158,9 @@ jobs:
             echo "🔄 Updating services..."
             docker compose -f docker-compose.prod.yml up -d --no-deps backend frontend
 
-            # Wait for initial container startup
+            # Brief stabilization period (health checks handle startup timing)
             echo "⏳ Waiting for containers to initialize..."
-            sleep 10
+            sleep 5
 
             # Health check backend with retries and exponential backoff
             echo "🏥 Checking backend health (with retries)..."
