--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,9 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v4
 
+      - name: Install dependencies
+        run: make install-all
+
       - name: Start PostgreSQL
         run: docker compose -f docker-compose.dev.yml up -d
 
